--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,12 @@ body {
     margin-right: 1em;
     margin-bottom: 1em;
     border-radius: 5px;
+    transition: all 0.5s;
+}
+
+.gallery img:hover {
+    /* -webkit-transform: scale(1.5, 1.5) ; for safari */ 
+    transform: scale(1.2, 1.2);
 }
 
 nav {
@@ -28,6 +34,7 @@ header a:visited {
     padding-right: 1rem;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
+    transition: all 0.5s;
 }
 
 header a:hover,
